Update parser for TimeEdit .ics format changes; refactor Spring app to use in-memory MongoDB instance.